--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,9 @@
 # Build settings
 markdown: kramdown
 
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://matteopetrani.gihub.io/matteoelaura" # the base hostname & protocol for your site
+
 # Bootstrap sass
 sass:
   sass_dir: node_modules/bulma
